--- a/app/src/main/res/layout/fragment_regex_validator.xml
+++ b/app/src/main/res/layout/fragment_regex_validator.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_regexp"
@@ -54,12 +54,12 @@
                 android:id="@+id/regex_text"
                 android:background="@null"
                 android:minHeight="36dp"/>
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/syntax_keyword"/>
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_text"
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:minHeight="36dp"
                 android:background="@null"/>
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
