Monet engine support

--- a/app/src/main/res/layout/activity_regexp.xml
+++ b/app/src/main/res/layout/activity_regexp.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="ru.svolf.pcompiler.ui.activity.TabbedActivity">
+    tools:context="ru.svolf.pcompiler.ui.activity.TabbedActivity"
+    android:fitsSystemWindows="false">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -12,17 +13,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:popupTheme="?popupTheme"
-            app:layout_scrollFlags="scroll|enterAlways|snap">
+            android:popupTheme="?popupTheme">
         </androidx.appcompat.widget.Toolbar>
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="?attr/colorAccent"
+            app:tabGravity="center"
+            app:tabMode="auto"
             app:layout_scrollFlags="scroll|enterAlways|snap"/>
     </com.google.android.material.appbar.AppBarLayout>
 
