--- a/app/src/main/res/layout/fragment_full_editor.xml
+++ b/app/src/main/res/layout/fragment_full_editor.xml
@@ -24,8 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:background="?colorPrimary">
+        android:layout_alignParentBottom="true">
     <HorizontalScrollView
         android:layout_weight="7"
         android:layout_width="0dp"
