--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,33 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="common_status_bar">#aa757575</color>
-    <color name="common_status_bar_dark">#aa181818</color>
-    <color name="control_hl">#88448aff</color>
-    <color name="black_control_hl">#88e62117</color>
-
-    <color name="light_colorPrimary">#ffffff</color>
-    <color name="light_colorPrimaryDark">#bdbdbd</color>
-    <color name="light_colorPrimaryDark_v23">#e0e0e0</color>
-    <color name="light_colorAccent">#448aff</color>
-    <color name="light_icon">#212121</color>
-    <color name="light_settings_icon">#616161</color>
-
-    <color name="dark_colorPrimary">#212121</color>
-    <color name="dark_colorPrimaryDark">#181818</color>
-    <color name="dark_colorAccent">#448aff</color>
-    <color name="dark_windowBackground">#141414</color>
-    <color name="dark_icon">#fafafa</color>
-    <color name="dark_settings_icon">#fafafa</color>
-
-    <color name="glass_colorPrimary">#141414</color>
-    <color name="glass_colorPrimaryDark">#101010</color>
-    <color name="glass_colorAccent">#e62117</color>
-    <color name="glass_windowBackground">#000000</color>
-    <color name="glass_icon">#fafafa</color>
-    <color name="glass_settings_icon">#fafafa</color>
-    <color name="light_cardView">#ffffff</color>
-    <color name="dark_cardView">#212121</color>
-    <color name="glass_cardView">#9c000000</color>
+    <color name="seed">#448aff</color>
+    <color name="md_theme_light_primary">#005AC2</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#D8E2FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001A42</color>
+    <color name="md_theme_light_secondary">#005FB0</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#D5E3FF</color>
+    <color name="md_theme_light_onSecondaryContainer">#001C3B</color>
+    <color name="md_theme_light_tertiary">#715D00</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFE179</color>
+    <color name="md_theme_light_onTertiaryContainer">#231B00</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F7FDFF</color>
+    <color name="md_theme_light_onBackground">#001F25</color>
+    <color name="md_theme_light_surface">#F7FDFF</color>
+    <color name="md_theme_light_onSurface">#001F25</color>
+    <color name="md_theme_light_surfaceVariant">#E1E2EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#44474F</color>
+    <color name="md_theme_light_outline">#75777F</color>
+    <color name="md_theme_light_inverseOnSurface">#D3F7FF</color>
+    <color name="md_theme_light_inverseSurface">#00363E</color>
+    <color name="md_theme_light_inversePrimary">#ADC6FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#005AC2</color>
+    <color name="md_theme_light_surfaceTintColor">#005AC2</color>
+    <color name="md_theme_dark_primary">#ADC6FF</color>
+    <color name="md_theme_dark_onPrimary">#002E6A</color>
+    <color name="md_theme_dark_primaryContainer">#004495</color>
+    <color name="md_theme_dark_onPrimaryContainer">#D8E2FF</color>
+    <color name="md_theme_dark_secondary">#A6C8FF</color>
+    <color name="md_theme_dark_onSecondary">#00315F</color>
+    <color name="md_theme_dark_secondaryContainer">#40004787</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D5E3FF</color>
+    <color name="md_theme_dark_tertiary">#E5C44A</color>
+    <color name="md_theme_dark_onTertiary">#3B2F00</color>
+    <color name="md_theme_dark_tertiaryContainer">#554500</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFE179</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F25</color>
+    <color name="md_theme_dark_onBackground">#A0EFFF</color>
+    <color name="md_theme_dark_surface">#001F25</color>
+    <color name="md_theme_dark_onSurface">#A0EFFF</color>
+    <color name="md_theme_dark_surfaceVariant">#44474F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C4C6D0</color>
+    <color name="md_theme_dark_outline">#8E9099</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F25</color>
+    <color name="md_theme_dark_inverseSurface">#A0EFFF</color>
+    <color name="md_theme_dark_inversePrimary">#005AC2</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#ADC6FF</color>
+    <color name="md_theme_dark_surfaceTintColor">#ADC6FF</color>
 
     <!--syntax-->
     <color name="syntax_num_attribute">#1976d2</color>
