--- a/app/src/main/res/layout/dialog_full_view.xml
+++ b/app/src/main/res/layout/dialog_full_view.xml
@@ -6,12 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom">
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/caption_bar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="?colorPrimary"
-        android:elevation="4dp"
         app:title="@string/title_fullview" />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -29,15 +27,11 @@
             style="@style/Base.TextAppearance.AppCompat.Subhead"
             tools:text="@string/large_text"/>
     </androidx.core.widget.NestedScrollView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_save_patch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_save"
         android:background="?selectableItemBackground"
-        android:textColor="?settings_icon_color" />
+        style="@style/Widget.Material3.Button.TonalButton.Icon"/>
 </LinearLayout>
